# graded-reader

./: .gitignore  README.md  TODO.md  django-notes.md  features.md  gitpush.sh  js-notes.txt  musk-gpt.md  package.json  playground.ipynb  render.yaml  scripts.txt  storage.sh  syncapp.sh  tailwind.config.js
src/: Procfile  pyproject.toml  render.yaml  requirements.txt
src/app/: context_processors.py  forms.py  models.py  urls.py  views.py
src/app/algorithm/: algorithms.py
src/app/data/: book.py  verb_stems.py
src/app/migrations/: 0001_initial.py  0004_passage_tags.py  0005_algorithm.py  0006_rename_penalize_by_stem_algorithm_penalize_by_verb_stem_and_more.py  0007_algorithm_phrases_and_more.py  0008_alter_algorithm_proper_noun_divisor_and_more.py  0009_alter_word_gloss_alter_word_ketiv_alter_word_lex_and_more.py  0010_alter_word_gender_alter_word_language_and_more.py
src/app/providers/: add_passages.py  bhsa_provider.py  book_provider.py  hebrew_data_provider.py  passage_provider.py  ranked_data_provider.py  tf_api.py
src/app/templates/: algorithms.html  index.html  layout.html  passages.html  passages_compare.html  read.html  settings.html
src/app/templatetags/: list_extras.py
src/app/utils/: add_passages.py  add_words.py  custom_logging.py  general.py  io.py
src/gradedhebrew/: asgi.py  db.py  env.py  log.py  settings.py  urls.py  wsgi.py
svelte-app/: db.sqlite3  package-lock.json  package.json  pyproject.toml
svelte-app/frontend/: package-lock.json  package.json  rollup.config.js
svelte-app/frontend/src/: Api.svelte  App.svelte  Paragraph.svelte
svelte-app/myapp/: settings.py  urls.py
svelte-app/myapp/api/: models.py  views.py
svelte-app/myapp/app/: apps.py  (+1 more)
vanilla-app/: jsconfig.json  package-lock.json  package.json  prettier.config.js  pyproject.toml  runapp.sh  tailwind.config.js
vanilla-app/app/: forms.py  models.py  urls.py  views.py
vanilla-app/gradedhebrew/: settings.py
vanilla-app/scripts/: get_crispy_path.py  lint.py  pre-commit  run-server
vanilla-app/src/: .env  manage.py  pyproject.toml  requirements.txt
(+319 files in other folders)
