[tool.poetry]
name = "hebrew-reader"
version = "0.1.0"
description = ""
authors = ["sethbam9 <54952081+sethbam9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.4"
text-fabric = "11.3.1"
whitenoise = "^6.4.0"
django-widget-tweaks = "^1.4.12"
isort = "^5.13.2"
python-json-logger = "^2.0.7"
google-cloud-logging = "^3.10.0"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.djlint] # https://www.djlint.com/docs/getting-started/
profile = "django"  # set the profile for Django templates
indent = 4  # sets the indentation to 4 spaces
format_css = true  # Format the content of CSS script tags
format_js = true  # Format the content of JS script tags
max_blank_lines = 1
max_line_length = 80
max_attribute_length = 50
format_attribute_template_tags = true
blank_line_after_tag = ""
blank_line_before_tag = ""
line_break_after_multiline_tag = false

[tool.djlint.js]
indent_size=4

[tool.djlint.css]
indent_size=4